--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "sonner": "^2.0.7"
+    "sonner": "^2.0.7",
+    "swr": "^2.3.8"
   },
   "devDependencies": {
     "@types/node": "^25.0.9",
