--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fast-xml-parser": "^5.3.3",
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.378.0",
     "next": "14.2.4",
